Mantaflow Object Initial Velocity Local Coordinates. #74818

Closed
opened 2020-03-16 17:17:27 +01:00 by RAM · 15 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: Quadro P4000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.70

Blender Version
Broken: version: 2.82 (sub 7), branch: master, commit date: 2020-02-12 16:20, hash: blender/blender@77d23b0bd7

Short description of error
Documentation https://docs.blender.org/manual/en/latest/physics/fluid/type/flow.html#initial-velocity states that:

Initial Velocity: When enabled, the fluid will inherit the momentum of the flow source.

This is not true for all sub-items - Initial X Y and Z velocity will affect stationary object.

Initial X, Y, Z: Initial velocity along X, Y, Z coordinates. Can be used in addition to the initial velocity along the Normal.

It is not clear in what coordinate space this will affect simulation.

Exact steps for others to reproduce the error
#74818.blend

  • Open file
  • Bake and run simulation.

Flow source is rotated and has set initial velocity in Z.
One may expect that flow velocity vector will be affected by flow source rotation.

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: Quadro P4000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.70 **Blender Version** Broken: version: 2.82 (sub 7), branch: master, commit date: 2020-02-12 16:20, hash: `blender/blender@77d23b0bd7` **Short description of error** Documentation https://docs.blender.org/manual/en/latest/physics/fluid/type/flow.html#initial-velocity states that: > Initial Velocity: When enabled, the fluid will inherit the momentum of the flow source. This is not true for all sub-items - Initial X Y and Z velocity will affect stationary object. >Initial X, Y, Z: Initial velocity along X, Y, Z coordinates. Can be used in addition to the initial velocity along the Normal. It is not clear in what coordinate space this will affect simulation. **Exact steps for others to reproduce the error** [#74818.blend](https://archive.blender.org/developer/F8423789/T74818.blend) - Open file - Bake and run simulation. Flow source is rotated and has set initial velocity in Z. One may expect that flow velocity vector will be affected by flow source rotation.
Author

Added subscriber: @CrossmindStudio

Added subscriber: @CrossmindStudio

Added subscribers: @sebbas, @iss

Added subscribers: @sebbas, @iss

@sebbas It is not clear to me, if this is working as intended, Can you confirm/close this report?

@sebbas It is not clear to me, if this is working as intended, Can you confirm/close this report?
Member

Added subscriber: @ankitm

Added subscriber: @ankitm
Member
https://developer.blender.org/T72949
Member

Changed status from 'Needs Triage' to: 'Archived'

Changed status from 'Needs Triage' to: 'Archived'
Ankit Meel self-assigned this 2020-04-20 10:29:07 +02:00
Member

Initial Velocity
When enabled, the fluid will inherit the momentum of the flow source.

So a stationary object will not give a velocity of 2 in any direction.
https://docs.blender.org/manual/en/latest/physics/fluid/type/flow.html#initial-velocity

> Initial Velocity > When enabled, the fluid will inherit the momentum of the flow source. So a stationary object will not give a velocity of 2 in any direction. https://docs.blender.org/manual/en/latest/physics/fluid/type/flow.html#initial-velocity

Changed status from 'Archived' to: 'Confirmed'

Changed status from 'Archived' to: 'Confirmed'

In #74818#913855, @ankitm wrote:

Initial Velocity
When enabled, the fluid will inherit the momentum of the flow source.

So a stationary object will not give a velocity of 2 in any direction.
https://docs.blender.org/manual/en/latest/physics/fluid/type/flow.html#initial-velocity

I will reopen and confirm because this doen't make sense - Setting Z initial velocity has effect on stationary source, but it is not specified in which coordinate space.

So I guess this is double wrong..

> In #74818#913855, @ankitm wrote: >> Initial Velocity >> When enabled, the fluid will inherit the momentum of the flow source. > So a stationary object will not give a velocity of 2 in any direction. > https://docs.blender.org/manual/en/latest/physics/fluid/type/flow.html#initial-velocity I will reopen and confirm because this doen't make sense - Setting Z initial velocity has effect on stationary source, but it is not specified in which coordinate space. So I guess this is double wrong..
Ankit Meel removed their assignment 2020-04-23 08:56:40 +02:00
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

The behavior seems to be the same in the old fluids system. Therefore, I think this is not a bug in Blender, but in the documentation (I'll fix that).

We might want to change the behavior at some point, but that is outside of the scope of a bug report.

The behavior seems to be the same in the old fluids system. Therefore, I think this is not a bug in Blender, but in the documentation (I'll fix that). We might want to change the behavior at some point, but that is outside of the scope of a bug report.

This issue was referenced by blender/blender@fffcb6e480

This issue was referenced by blender/blender@fffcb6e48068d77de6bbaaf35ef30515d1078dac
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jacques Lucke self-assigned this 2020-05-12 13:56:36 +02:00

This issue was referenced by 6651

This issue was referenced by 6651

Added subscriber: @HmeliQ

Added subscriber: @HmeliQ
Sign in to join this conversation.
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender-manual#74818
No description provided.