Fix T74818: improve tooltip for initial fluid velocity