source/blender/makesrna/intern/rna_fluid.c
@@ -2471,7 +2471,8 @@ static void rna_def_fluid_flow_settings(BlenderRNA *brna)
   RNA_def_property_float_sdna(prop, NULL, "vel_coord");
   RNA_def_property_array(prop, 3);
   RNA_def_property_range(prop, -1000.1, 1000.1);
-  RNA_def_property_ui_text(prop, "Initial", "Initial velocity in X, Y and Z direction");
+  RNA_def_property_ui_text(
+      prop, "Initial", "Initial velocity in X, Y and Z direction in world space");
   RNA_def_property_update(prop, NC_OBJECT | ND_MODIFIER, "rna_Fluid_flow_reset");
 
   prop = RNA_def_property(srna, "volume_density", PROP_FLOAT, PROP_NONE);
